--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ header {
 
 nav a {
     font-weight: 600;
-    padding-right: 10px;
+    padding-right: 30px;
     text-decoration: none;
     color: black;
 }
@@ -55,6 +55,7 @@ h2 {
     text-align: center;
     
 }
+/* GRID CONTAINER */
 
 .gridcontainer {
     display: grid;
@@ -63,11 +64,12 @@ h2 {
     background-color: lightblue;
     align-content: center;
     justify-content: center;
-
 }
 
 .griditems {
-    border-radius: 10px;
+    display:flex;
+    border: 1px solid blueviolet;
+    border-radius: 30px;
 	max-height: 350px;
 	font-weight: bold;
 	padding: 20px;
@@ -75,6 +77,7 @@ h2 {
 	overflow: hidden;
 	background-size: cover;
 	background-position: center center;
+   
 }
 
 form {
