--- a/css/style.css
+++ b/css/style.css
@@ -59,16 +59,25 @@ h2 {
 
 .gridcontainer {
     display: grid;
-    grid-template-columns: repeat(3,max-content);
-	gap: 10px;
-    background-color: lightblue;
-    align-content: center;
-    justify-content: center;
+    grid-template-columns: repeat(auto-fill, minmax(360px, 1fr)); 
+    grid-template-rows: minmax(auto, 1fr);     
+    gap:1rem;
+    margin-top: 2rem;
 }
 
 .griditems {
+    display: flex;
+    padding: 0.5rem 2rem;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: justify;
+    background-color: cornflowerblue;
+   
+}
+
+.img {
     display:flex;
-    border: 1px solid blueviolet;
     border-radius: 30px;
 	max-height: 350px;
 	font-weight: bold;
@@ -77,7 +86,6 @@ h2 {
 	overflow: hidden;
 	background-size: cover;
 	background-position: center center;
-   
 }
 
 form {
