--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,8 @@ form {
 .audiodisplay {
     margin-top: 10px;
     margin-bottom: 50px;
+    border: 1px solid black;
+    border-radius: 30px;
 }
 
 footer {
